# parc

./: Cargo.toml  LICENSE
src/: main.rs
src/fs/: directory.rs
src/providers/: directory.rs  log.rs  mod.rs
src/ui/: color.rs  drawables.rs  mod.rs
